--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:mysecretpassword@localhost:5432/mydb?schema=public
+DATABASE_URL=postgresql://admin:admin@localhost:5432/mydb?schema=public
 JWT_SECRET=some
