--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test": "jest --config ./test/jest-e2e.json",
+    "docker": "docker-compose up -d",
+    "prisma": "npx prisma migrate dev --name init",
     "seed": "npx prisma db seed"
   },
   "dependencies": {
